<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vinilos_background">

    <!-- Header Dinámico -->
    <TextView
        android:id="@+id/tv_artists_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Catálogo de Artistas (Visitante)" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_artists"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="8dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/tv_artists_header"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_artist" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_loading"
        android:accessibilityLiveRegion="polite"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminateTint="@color/vinilos_salmon" />

</androidx.constraintlayout.widget.ConstraintLayout>